--- a/Depoza/Base.lproj/Main.storyboard
+++ b/Depoza/Base.lproj/Main.storyboard
@@ -577,7 +577,7 @@
             </objects>
             <point key="canvasLocation" x="1077" y="-1357"/>
         </scene>
-        <!--Edit Description-->
+        <!--Description-->
         <scene sceneID="ILK-6D-sak">
             <objects>
                 <viewController id="95x-nD-XVy" customClass="EditDescriptionViewController" sceneMemberID="viewController">
@@ -604,7 +604,7 @@
                             <constraint firstAttribute="bottom" secondItem="PKs-ba-HLP" secondAttribute="bottom" id="yHo-Mq-aFi"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Edit Description" id="zQn-Be-5l1">
+                    <navigationItem key="navigationItem" title="Description" id="zQn-Be-5l1">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="KHh-Qq-xCR">
                             <connections>
                                 <action selector="cancelBarButtonPressed:" destination="95x-nD-XVy" id="XdQ-JQ-QWf"/>
